# ChangeLog for dev-perl/Net-DNS
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.74 2006/02/13 13:36:49 mcummings Exp $

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> Net-DNS-0.48.ebuild,
  Net-DNS-0.49.ebuild, Net-DNS-0.53.ebuild, Net-DNS-0.53-r1.ebuild,
  Net-DNS-0.55.ebuild:
  Virtuals for perl-core

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> Net-DNS-0.53-r1.ebuild:
  Mark 0.53-r1 stable on alpha

  28 Jan 2006; Markus Rothe <corsair@gentoo.org> Net-DNS-0.53-r1.ebuild,
  Net-DNS-0.55.ebuild:
  Added ~ppc64

  27 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> Net-DNS-0.55.ebuild:
  Added to ~hppa, ~ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Net-DNS-0.53-r1.ebuild:
  Marking sparc x86 stable

*Net-DNS-0.55 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> +Net-DNS-0.55.ebuild:
  Version bump

  02 Dec 2005; Fernando J. Pereda <ferdy@gentoo.org> Net-DNS-0.53-r1.ebuild:
  re-add ~alpha wrt bug #112508

  01 Dec 2005; Luis Medinas <metalgod@gentoo.org> Net-DNS-0.53-r1.ebuild:
  Added ~amd64 keyword. bug #112508.

*Net-DNS-0.53-r1 (21 Nov 2005)

  21 Nov 2005; <mcumming@gentoo.org> +Net-DNS-0.53-r1.ebuild:
  Bug 112641

  14 Nov 2005; Michael Hanselmann <hansmi@gentoo.org> Net-DNS-0.53.ebuild:
  Added to ~hppa, ~ppc. See bug #112508.

*Net-DNS-0.53 (14 Nov 2005)

  14 Nov 2005; <mcumming@gentoo.org> +Net-DNS-0.53.ebuild:
  New version upstream, bug 112468

  10 Oct 2005; Hardave Riar <hardave@gentoo.org> Net-DNS-0.49.ebuild:
  Stable on mips.

  19 Sep 2005; Marcus D. Hanwell <cryos@gentoo.org> Net-DNS-0.49.ebuild:
  Stable on amd64.

  08 Sep 2005; Aron Griffis <agriffis@gentoo.org> Net-DNS-0.49.ebuild:
  Mark 0.49 stable on alpha

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> Net-DNS-0.49.ebuild:
  Stable on ppc64

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> Net-DNS-0.49.ebuild:
  stable on ia64
