@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/Net-DNS-0.49.ebuild,v 1.15 2006/02/13 13:36:49 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/Net-DNS-0.49.ebuild,v 1.16 2006/02/14 01:29:52 halcy0n Exp $
 
 inherit perl-module
 
@@ -18,7 +18,7 @@ IUSE=""
 
 DEPEND="virtual/perl-Digest-MD5
 		dev-perl/Digest-HMAC
-		virtual/perl-MIME-Base64 
+		virtual/perl-MIME-Base64
 		virtual/perl-Test-Simple"
 mydoc="TODO"
 
