@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-DNS
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.74 2006/02/13 13:36:49 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.75 2006/02/14 01:29:52 halcy0n Exp $
+
+  14 Feb 2006; Mark Loeser <halcy0n@gentoo.org> Net-DNS-0.48.ebuild,
+  Net-DNS-0.49.ebuild:
+  Trim trailing spaces
 
   13 Feb 2006; Michael Cummings <mcummings@gentoo.org> Net-DNS-0.48.ebuild,
   Net-DNS-0.49.ebuild, Net-DNS-0.53.ebuild, Net-DNS-0.53-r1.ebuild,
